# meowind

./: Cargo.toml  README.md
src/: main.rs  source.rs  structs.rs
src/errors/: command_line.rs  compiler.rs  context.rs  mod.rs  syntax.rs
src/frontend/: mod.rs
src/frontend/lexing/: lexer.rs  mod.rs  tokens.rs
src/frontend/parsing/: _parser.md  parser.rs
src/frontend/parsing/ast/: arg.rs  block.rs  body.rs  expressions.rs  functions.rs  items.rs  mod.rs  namespace.rs  project.rs  projects.rs  statements.rs  type.rs
src/frontend/parsing/parser/: bodies.rs  expressions.rs  functions.rs  items.rs  mod.rs  statements.rs  types.rs
src/middlend/: translator.rs
src/translation/cranelift/: functions.rs  mod.rs
src/utils/: colors.rs  debug.rs  logger.rs  mod.rs  stopwatch.rs  string.rs
tests/: lexer1.meo  lexer1_debug.txt  lexer2.meo  parser.meo
