[package]
name = "meowind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.110.1"
cranelift-jit = "0.110.1"
cranelift-module = "0.110.1"
cranelift-native = "0.110.1"
pad = "0.1.6"
unicode-segmentation = "1.11.0"
winapi-util = "0.1.8"
